# Face-Recognition-System

./: README.md  main.py  pyproject.toml
