[tool.poetry]
name = "facial recognition system"
version = "0.1.0"
description = ""
authors = ["Charchit <charchitregmi10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
